--- a/workout_timer.html
+++ b/workout_timer.html
@@ -15,6 +15,9 @@
     <div class="progress-bar">
       <div id="progress" style="width: 0%;"></div>
     </div>
+    <div id="progress-container">
+        <div id="progress"></div>
+      </div>      
     <div class="mode-selector">
       <button onclick="startTimer('3x12')">3 x 12</button>
       <button onclick="startTimer('2xLong1xSemi')">2 x Long / 1 x Semi</button>
