--- a/workout_timer.html
+++ b/workout_timer.html
@@ -21,6 +21,12 @@
     <button onclick="startTimer('2xSemi1xLong')">2 x Semi/1 x Long</button>
   </div>
 
+  <div class="controls">
+    <button id="pause-btn" onclick="pauseWorkout()">Pause</button>
+    <button onclick="skipPhase()">Skip</button>
+    <button onclick="rewindPhase()">Rewind</button>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
